# deepseek-vision

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.en.md  README.md  main.py  pyproject.toml  vision-cli.py
app/: admin_auth.py  auth.py  config.py  main.py  messages.py  models.py  openai_compat.py  router.py  schemas.py  slow_log.py  vision.py  web_fetch.py  web_search.py
app/backends/: __init__.py  messages_http.py
app/static/: index.html
app/static/assets/: index-C-OsOjK1.js  index-C_Rwh1Oo.js  index-DKWxnkil.js
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx
